Fixed responsive layout issues.

--- a/assets/style.css
+++ b/assets/style.css
@@ -178,7 +178,7 @@ body {
         margin: 0;
     }
     #gnocchia {
-        font-size: 1.5em;
+        font-size: 1.2em;
     }
     .game-header {
         font-size: 1.4em;
@@ -202,13 +202,55 @@ body {
     }
     .controls {
         flex-grow: 1;
-        font-size: 2em;
     }
-   .bottom-row {
-    padding-bottom: 12px;
-   }
+    .top-row {
+        flex: 1;
+    }
+    .top-row i {
+        width: 60%;
+        height: 60%;
+    }
     .mid-row {
-        justify-content: space-around;
+        justify-content: stretch;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        flex: 1;
+    }
+    .mid-row i {
+        width: 100%;
+        height: 60%;
+    }
+    .bottom-row {
+        flex: 1;
+        margin-bottom: 12px;
+    }
+    .bottom-row i {
+        width: 60%;
+        height: 60%;
+    }
+    .fa-angle-right:before {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+    }
+    .fa-angle-left:before {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+    }
+    .fa-angle-up:before {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+    }
+    .fa-angle-down:before {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
     }
     .modal {
         max-width: 100%;
@@ -249,6 +291,7 @@ body {
     height: 80%;
     width: 85%;
     max-height: 40vh;
+    margin-bottom: 12px;
     }
     .screen {
         width: 100%;
@@ -263,8 +306,54 @@ body {
     .controls {
         flex-grow: 1;
     }
+    .top-row {
+        flex: 1;
+    }
+    .top-row i {
+        width: 60%;
+        height: 60%;
+    }
     .mid-row {
-        justify-content: space-between;
+        justify-content: stretch;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        flex: 1;
+    }
+    .mid-row i {
+        width: 100%;
+        height: 60%;
+    }
+    .bottom-row {
+        flex: 1;
+        margin-bottom: 12px;
+    }
+    .bottom-row i {
+        width: 60%;
+        height: 60%;
+    }
+    .fa-angle-right:before {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+    }
+    .fa-angle-left:before {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+    }
+    .fa-angle-up:before {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+    }
+    .fa-angle-down:before {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
     }
     .modal {
         max-width: 100%;
